--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -27,3 +27,9 @@ masterpage.privacy							= Privacy policy
 masterpage.contact							= Contact
 masterpage.cookies							= Cookies policy
 masterpage.cookiesbanner					= Our website uses cookies to enhance your browsing experience.
+
+master.page.register = Register
+master.page.register.attendee = As attendee
+master.page.register.artist = As artist
+master.page.register.owner = As owner
+master.page.message = Messages
