--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -27,3 +27,9 @@ masterpage.privacy							= Política de privacidad
 masterpage.contact							= Contacto
 masterpage.cookies							= Política de cookies
 masterpage.cookiesbanner 					= Nuestra web usa cookies para ayudar a mejorar tu experiencia de navegación.
+
+master.page.register = Registrarse
+master.page.register.attendee = Como asistente
+master.page.register.artist = Como artista
+master.page.register.owner = Como dueño
+master.page.message = Mensajes
