--- a/Acme-Circus/src/main/webapp/views/attendee/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/attendee/messages.properties
@@ -43,3 +43,4 @@ attendee.password.error = Passwords do not match
 attendee.vat.pattern = ES is the optional Spanish prefix, A is an alphanumeric character and N is an numeric character
 
 attendee.expired.card.error = Credit card has expired
+attendee.dni.pattern = A is an alphanumeric character and N is an numeric character
