--- a/Acme-Circus/src/main/webapp/views/attendee/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/attendee/messages_es.properties
@@ -41,3 +41,5 @@ attendee.password.error = Las contraseñas no coinciden
 
 attendee.vat.pattern = ES es el prefijo español opcional, A es un caracter alfanumérico y N es un caracter numérico
 attendee.expired.card.error = La tarjeta de crédito ha expirado
+
+attendee.dni.pattern = A es un caracter alfanumérico y N es un caracter numérico
