--- a/Acme-Circus/src/main/webapp/views/circus/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/circus/messages.properties
@@ -11,3 +11,8 @@ circus.active = Active
 circus.history = History
 
 circus.back= Back
+circus.save= Save
+circus.cancel= Cancel
+circus.edit= Edit
+
+circus.commit.error= Commit Error
