--- a/Acme-Circus/src/main/webapp/views/circus/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/circus/messages_es.properties
@@ -13,3 +13,8 @@ circus.active= Activo
 circus.history= Historia
 
 circus.back= Volver
+circus.save= Guardar
+circus.cancel= Cancelar
+circus.edit= Editar
+
+circus.commit.error= No se puede completar la accion
