--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -35,3 +35,4 @@ master.page.register.owner = Como dueño
 master.page.message = Mensajes
 
 master.page.circus= Circos
+master.page.myListCircus= Mis Circos
