--- a/Acme-Circus/src/main/webapp/views/categoryTour/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryTour/messages.properties
@@ -11,5 +11,5 @@ categoryTour.minAge = Minimum age
 categoryTour.edit = Edit
 categoryTour.create = Create
 categoryTour.save = Save
-
 categoryTour.commit.error = Cannot commit operation
+categoryTour.tours = Tours
