--- a/Acme-Circus/src/main/webapp/views/categoryTour/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryTour/messages_es.properties
@@ -10,5 +10,5 @@ categoryTour.name = Nombre
 categoryTour.minAge = Edad mínima
 categoryTour.edit = Editar
 categoryTour.create = Crear
-
 categoryTour.commit.error = No se puede completar la operación
+categoryTour.tours = Giras
