--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -35,3 +35,5 @@ master.page.register.owner = As owner
 master.page.message = Messages
 
 master.page.circus= Circus
+master.page.tour = Tours
+master.page.categoryTour = Categories
