req NO terminado

--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -33,3 +33,4 @@ master.page.register.attendee = As attendee
 master.page.register.artist = As artist
 master.page.register.owner = As owner
 master.page.message = Messages
+master.page.artists = Artists
