--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -33,3 +33,4 @@ master.page.register.attendee = Como asistente
 master.page.register.artist = Como artista
 master.page.register.owner = Como dueño
 master.page.message = Mensajes
+master.page.artists = Artistas
