--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -39,3 +39,4 @@ master.page.tour = Tours
 master.page.categoryTour = Categories
 master.page.myListCircus= My Circus
 master.page.artists = Artists
+master.page.search = Searh tours
