--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -39,3 +39,4 @@ master.page.tour = Giras
 master.page.categoryTour = Categorias
 master.page.myListCircus= Mis Circos
 master.page.artists = Artistas
+master.page.search = Buscar giras
