--- a/Acme-Circus/src/main/webapp/views/tour/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages.properties
@@ -11,3 +11,5 @@ tour.description = Description
 tour.startDate = Start date
 tour.endDate = End date
 tour.stops = Stops
+tour.keyword = Keyword
+tour.search = Search
