--- a/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
@@ -11,3 +11,5 @@ tour.description = Descripcion
 tour.startDate = Comienzo de la gira
 tour.endDate = Final de la gira
 tour.stops = Paradas
+tour.keyword = Palabra clave
+touy.search = Buscar
