--- a/Acme-Circus/src/main/webapp/views/artist/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/artist/messages.properties
@@ -6,6 +6,10 @@
 # TDG Licence, a copy of which you may download from
 # http://www.tdg-seville.info/License.html
 
+artist.personal.data = Personal Data
+artist.userAccount = User Data
+artist.creditCard = Credit Card Data
+artist.dni = Dni
 artist.name = Name
 artist.surnames = Surnames
 artist.photo = Photo
@@ -16,3 +20,24 @@ artist.save = Save
 artist.commit.error = Can not commit operation
 artist.cancel = Cancel
 artist.performances = Show Performances
+
+artist.back = Back
+artist.username = Username
+artist.password = Password
+artist.confirmPassword = Confirm Password
+artist.holderName = Holder Name
+artist.brandName = Brand Name
+artist.number = Number
+artist.expirationMonth = Expiration Month
+artist.expirationYear = Expiration Year
+artist.cvv = CVV
+artist.check = I accept terms and conditions
+artist.username.error = Username not available
+artist.email.error = There is another account with that email
+artist.password.error = Passwords do not match
+
+artist.vat.pattern = ES is the optional Spanish prefix, A is an alphanumeric character and N is an numeric character
+
+artist.expired.card.error = Credit card has expired
+artist.dni.pattern = A is an alphanumeric character and N is an numeric character
+
