--- a/Acme-Circus/src/main/webapp/views/artist/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/artist/messages_es.properties
@@ -6,6 +6,11 @@
 # TDG Licence, a copy of which you may download from
 # http://www.tdg-seville.info/License.html
 
+artist.personal.data = Datos personales
+artist.userAccount = Datos de usuario
+artist.creditCard = Datos de la tarjeta de crédito
+artist.dni = Dni
+
 artist.name = Nombre
 artist.surnames = Apellidos
 artist.photo = Foto
@@ -15,3 +20,28 @@ artist.address = Direccion
 artist.save = Guardar
 artist.cancel = Cancelar
 artist.performances = Mostrar Actuaciones
+
+artist.username = Nombre de usuario
+artist.password = Contraseña
+artist.confirmPassword = Confirmación de la contraseña
+artist.holderName = Nombre del titular
+artist.brandName = Marca
+artist.number = Número
+artist.expirationMonth = Mes de expiración
+artist.expirationYear = Año de expiración
+artist.cvv = CVV
+artist.check = Acepto los términos y condiciones
+
+artist.back = Atrás
+artist.commit.error = No se pudo completar la acción
+
+artist.username.error = Nombre de usuario no disponible
+artist.email.error = Ya existe una cuenta con ese email
+artist.password.error = Las contraseñas no coinciden
+
+
+artist.vat.pattern = ES es el prefijo español opcional, A es un caracter alfanumérico y N es un caracter numérico
+artist.expired.card.error = La tarjeta de crédito ha expirado
+
+artist.dni.pattern = A es un caracter alfanumérico y N es un caracter numérico
+
