--- a/Acme-Circus/src/main/webapp/views/purchase/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages.properties
@@ -8,6 +8,13 @@
 form.num= Number
 form.category= Category of price
 
-pruchase.save = Save
-pruchase.cancel= Cancel
+purchase.save = Save
+purchase.cancel= Cancel
 
+
+purchase.totalPrice= Precio total
+purchase.name = Nombre Asistente
+purchase.creditCard= Tarjeta de credito
+purchase.tickets = Tickets
+ticket.refNumber = Numero de referencia
+ticket.categoryPrice = Categoria del precio
