--- a/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
@@ -9,7 +9,12 @@
 form.num = Numero
 form.category= Categoria del precio
 
-pruchase.save= Guardar
-pruchase.cancel= Cancelar
+purchase.save= Guardar
+purchase.cancel= Cancelar
 
-
+purchase.totalPrice= Total Price
+purchase.name = Attendee Name
+purchase.creditCard= Credit Card
+purchase.tickets = Tickets
+ticket.refNumber = Reference number
+ticket.categoryPrice = Category Price
