--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -36,3 +36,4 @@ master.page.message = Messages
 
 master.page.circus= Circus
 master.page.myListCircus= My Circus
+master.page.purchase= Buy tickets
