--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -36,3 +36,4 @@ master.page.message = Mensajes
 
 master.page.circus= Circos
 master.page.myListCircus= Mis Circos
+master.page.purchase= Comprar Entradas
