--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -7,8 +7,8 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.administrator			= Administrador
-master.page.administrator.categoryTour = Lista de categorï¿½as de gira
-master.page.administrator.action.2	= Acciï¿½n 2
+master.page.administrator.categoryTour = Lista de categorías de gira
+master.page.administrator.actor	= Lista de actores
 
 master.page.customer				= Cliente
 master.page.customer.action.1		= Acciï¿½n 1
