--- a/Acme-Circus/src/main/webapp/views/purchase/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages.properties
@@ -5,8 +5,8 @@
 # The use of this project is hereby constrained to the conditions of the
 # TDG Licence, a copy of which you may download from
 # http://www.tdg-seville.info/License.html
-form.num= Number
-form.category= Category of price
+purchase.num = Number
+purchase.category= Category of price
 
 purchase.save = Save
 purchase.cancel= Cancel
@@ -18,3 +18,4 @@ purchase.creditCard= Tarjeta de credito
 purchase.tickets = Tickets
 ticket.refNumber = Numero de referencia
 ticket.categoryPrice = Categoria del precio
+purchase.commit.error= Commit Error
