--- a/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
@@ -6,8 +6,8 @@
 # TDG Licence, a copy of which you may download from
 # http://www.tdg-seville.info/License.html
 
-form.num = Numero
-form.category= Categoria del precio
+purchase.num = Numero
+purchase.category= Categoria del precio
 
 purchase.save= Guardar
 purchase.cancel= Cancelar
@@ -18,3 +18,4 @@ purchase.creditCard= Credit Card
 purchase.tickets = Tickets
 ticket.refNumber = Reference number
 ticket.categoryPrice = Category Price
+purchase.commit.error= No se ha podido completar la accion.
