--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -37,3 +37,4 @@ master.page.message = Messages
 master.page.circus= Circus
 master.page.myListCircus= My Circus
 master.page.purchase= Buy tickets
+typeMismatch.java.lang.Integer = Amount must be a number.
