--- a/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from
 # http://www.tdg-seville.info/License.html
 
-purchase.num = Numero
+purchase.num = Cantidad
 purchase.category= Categoria del precio
 
 purchase.save= Guardar
