--- a/Acme-Circus/src/main/webapp/views/purchase/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages.properties
@@ -12,10 +12,11 @@ purchase.save = Save
 purchase.cancel= Cancel
 
 
-purchase.totalPrice= Precio total
-purchase.name = Nombre Asistente
-purchase.creditCard= Tarjeta de credito
+purchase.totalPrice= Total Price
+purchase.name = Attendee Name
+purchase.creditCard= Credit Card
 purchase.tickets = Tickets
-ticket.refNumber = Numero de referencia
-ticket.categoryPrice = Categoria del precio
-purchase.commit.error= Commit Error
+ticket.refNumber = Reference number
+ticket.categoryPrice = Category Price
+purchase.commit.error= No se ha podido completar la accion.
+ticket.amount= Price
