--- a/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
@@ -12,10 +12,11 @@ purchase.category= Categoria del precio
 purchase.save= Guardar
 purchase.cancel= Cancelar
 
-purchase.totalPrice= Total Price
-purchase.name = Attendee Name
-purchase.creditCard= Credit Card
+purchase.totalPrice= Precio total
+purchase.name = Nombre Asistente
+purchase.creditCard= Tarjeta de credito
 purchase.tickets = Tickets
-ticket.refNumber = Reference number
-ticket.categoryPrice = Category Price
-purchase.commit.error= No se ha podido completar la accion.
+ticket.refNumber = Numero de referencia
+ticket.categoryPrice = Categoria del precio
+purchase.commit.error= Commit Error
+ticket.amount= Precio
