--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -9,6 +9,7 @@
 master.page.administrator			= Administrator
 master.page.administrator.categoryTour = Tour categories list
 master.page.administrator.actor	= Actors list
+master.page.administrator.stats = Stats
 
 master.page.customer				= Customer
 master.page.customer.action.1		= Action 1
