--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -42,4 +42,5 @@ master.page.artists = Artistas
 master.page.search = Buscar giras
 master.page.myListCircus= Mis Circos
 master.page.purchase= Comprar Entradas
+master.page.Mypurchase = Mis compras
 typeMismatch.java.lang.Integer = El valor debe ser numerico.
