--- a/Acme-Circus/src/main/webapp/views/purchase/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages.properties
@@ -11,6 +11,8 @@ purchase.category= Category of price
 purchase.save = Save
 purchase.cancel= Cancel
 
+puchase.stop = Stop
+
 
 purchase.totalPrice= Total Price
 purchase.name = Attendee Name
