--- a/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
@@ -12,6 +12,9 @@ purchase.category= Categoria del precio
 purchase.save= Guardar
 purchase.cancel= Cancelar
 
+puchase.stop = Parada
+
+
 purchase.totalPrice= Precio total
 purchase.name = Nombre Asistente
 purchase.creditCard= Tarjeta de credito
