--- a/Acme-Circus/src/main/webapp/views/purchase/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages.properties
@@ -11,9 +11,9 @@ purchase.category= Category of price
 purchase.save = Save
 purchase.cancel= Cancel
 
-puchase.stop = Stop
-
-
+purchase.stop = Stop
+purchase.surnames =Surnames
+purchase.location=Location
 purchase.totalPrice= Total Price
 purchase.name = Attendee Name
 purchase.creditCard= Credit Card
