--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -40,3 +40,4 @@ master.page.categoryTour = Categories
 master.page.myListCircus= My Circus
 master.page.artists = Artists
 master.page.search = Searh tours
+master.page.categoryPriceList = My Category Prices
