--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -40,3 +40,4 @@ master.page.categoryTour = Categorias
 master.page.myListCircus= Mis Circos
 master.page.artists = Artistas
 master.page.search = Buscar giras
+master.page.categoryPriceList = Mis precios
