Falla el create por ahora

--- a/Acme-Circus/src/main/webapp/views/categoryPrice/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryPrice/messages.properties
@@ -11,3 +11,7 @@ categoryPrice.category = Ticket category
 categoryPrice.stop = Stop
 categoryPrice.city = City
 categoryPrice.location = Location
+categoryPrice.create = Create category price
+categoryPrice.save = Save
+categoryPrice.cancel = Cancel
+categoryPrice.commit.error = There was an error
