--- a/Acme-Circus/src/main/webapp/views/categoryPrice/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryPrice/messages_es.properties
@@ -11,3 +11,7 @@ categoryPrice.category = Tipo de entrada
 categoryPrice.stop = Parada
 categoryPrice.city = Ciudad
 categoryPrice.location = Lugar 
+categoryPrice.create = Crear categoría
+categoryPrice.save = Guardar
+categoryPrice.cancel = Cancelar
+categoryPrice.commit.error = Ha ocurrido un error
