--- a/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
@@ -12,3 +12,5 @@ stop.location= Ubicacion
 stop.date= Fecha
 
 stop.purchase= Comprar
+stop.spotsTotal = Numero de entradas
+stop.spotsAvailable = Entradas disponibles
