--- a/Acme-Circus/src/main/webapp/views/stop/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages.properties
@@ -11,3 +11,5 @@ stop.location= Location
 stop.date= Date
 
 stop.purchase= Purchase
+stop.spotsTotal = Spots total
+stop.spotsAvailable = Spots available
