--- a/Acme-Circus/src/main/webapp/views/circus/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/circus/messages_es.properties
@@ -18,3 +18,4 @@ circus.cancel= Cancelar
 circus.edit= Editar
 
 circus.commit.error= No se puede completar la accion
+circus.deactivate= Desactivar
