--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -10,6 +10,9 @@ master.page.administrator			= Administrador
 master.page.administrator.categoryTour = Lista de categorï¿½as de gira
 master.page.administrator.actor	= Lista de actores
 master.page.administrator.stats = Estadísticas
+master.page.administrator.circus = Lista de Circos
+
+
 
 master.page.customer				= Cliente
 master.page.customer.action.1		= Acciï¿½n 1
