--- a/Acme-Circus/src/main/webapp/views/categoryPrice/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryPrice/messages.properties
@@ -15,3 +15,6 @@ categoryPrice.create = Create category price
 categoryPrice.save = Save
 categoryPrice.cancel = Cancel
 categoryPrice.commit.error = There was an error
+categoryPrice.delete.confirmation = Are you sure you want to delete this category?
+categoryPrice.delete = Delete 
+categoryPrice.aviso = You need to have stops if you want to create a category price
