--- a/Acme-Circus/src/main/webapp/views/categoryPrice/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryPrice/messages_es.properties
@@ -15,3 +15,6 @@ categoryPrice.create = Crear categoría
 categoryPrice.save = Guardar
 categoryPrice.cancel = Cancelar
 categoryPrice.commit.error = Ha ocurrido un error
+categoryPrice.delete.confirmation = ¿Seguro que desea eliminar la categoría?
+categoryPrice.delete = Eliminar
+categoryPrice.aviso = Necesitas tener paradas para poder crear una categoría
