--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -49,3 +49,4 @@ master.page.purchase= Buy tickets
 master.page.Mypurchase = My purchases
 typeMismatch.java.lang.Integer = Amount must be a number.
 master.page.banners= My banners
+master.page.mytours = My tours
