--- a/Acme-Circus/src/main/webapp/views/tour/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages.properties
@@ -14,10 +14,24 @@ tour.stops = Stops
 tour.keyword = Keyword
 tour.search = Search
 
+tour.validate = Validate tour
 
+tour.validated = Validated
 
+tour.categoryTour = Category
 
-
+tour.save = Save
+tour.cancel = Cancel
+tour.delete = Delete
+tour.delete.confirmation = Are you sure you want to delete this tour?
 
 tour.link = Link
+tour.validate = Validate
+tour.yes = Validated
+tour.no = No validated
 
+tour.create = Create tour
+tour.edit = Edit 
+
+tour.validated.error = You can't edit a tour already validated
+tour.commit.error = Something went wrong
