--- a/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
@@ -14,9 +14,23 @@ tour.stops = Paradas
 tour.keyword = Palabra clave
 touy.search = Buscar
 
+tour.yes = Validado
+tour.no = Sin validar
+tour.validated = Validado
+tour.validate = Validar
+tour.categoryTour = Categoría
 
+tour.save = Guardar
+tour.cancel = Cancelar
+tour.delete = Eliminar
+tour.delete.confirmation = ¿Seguro que desea eliminar esta gira?
 
+tour.create = Crear gira
+tour.edit = Editar
 
 tour.link = Enlace
+tour.validate = Validar gira
 
+tour.validated.error = No puedes editar una gira que ya esté validada
 
+tour.commit.error = Ha ocurrido un error
