--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -50,3 +50,4 @@ master.page.purchase= Comprar Entradas
 master.page.Mypurchase = Mis compras
 typeMismatch.java.lang.Integer = El valor debe ser numerico.
 master.page.banners= Mis anuncios
+master.page.mytours = Mis giras
