--- a/Acme-Circus/src/main/webapp/views/misc/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/misc/messages.properties
@@ -39,3 +39,5 @@ panic.text 		  = Sorry for the inconvenience.  The following exception was throw
 panic.message 	  = Message
 panic.stack.trace = Stack trace
 
+typeMismatch.java.lang.Double = Must be a number (integer or with decimals separated by period)
+typeMismatch.java.lang.Integer = Must be an integer
