--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -45,3 +45,6 @@ master.page.myListCircus= Mis Circos
 master.page.purchase= Comprar Entradas
 master.page.Mypurchase = Mis compras
 typeMismatch.java.lang.Integer = El valor debe ser numerico.
+master.page.performances = Mis Actuaciones
+master.page.offers = Mis ofertas
+
