--- a/Acme-Circus/src/main/webapp/views/performance/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/performance/messages.properties
@@ -9,4 +9,9 @@
 performance.name = Name
 performance.persons =Persons
 performance.video = Video
-
+performance.tags = Tags
+performance.create = Create a performance
+performance.edit = Edit
+performance.save = Save
+performance.delete = Delete
+performance.message.comma = Tags separate by commas
