--- a/Acme-Circus/src/main/webapp/views/performance/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/performance/messages_es.properties
@@ -9,3 +9,9 @@
 performance.name = Nombre
 performance.persons =Personas
 performance.video = Video
+performance.tags = Etiquetas
+performance.create = Crear una actuación
+performance.edit = Editar
+performance.save = Guardar
+performance.delete = Borrar
+performance.message.comma = Tags separadas por comas
