--- a/Acme-Circus/src/main/webapp/views/actor/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/actor/messages_es.properties
@@ -22,4 +22,8 @@ actor.creditCard = Tarjeta de crédito
 actor.bornDate = Fecha de nacimiento
 
 actor.show = Mostrar
-actor.back = Atrás
+
+
+actor.cancel = Cancelar
+actor.save = Guardar
+actor.commit.error = Imposible realizar la operacion
