--- a/Acme-Circus/src/main/webapp/views/actor/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/actor/messages.properties
@@ -23,3 +23,7 @@ actor.bornDate = Born date
 
 actor.show = Show
 actor.back = Back
+actor.cancel = Cancel
+
+actor.save = Save
+actor.commit.error = Can not commit operation
