--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -23,6 +23,8 @@ master.page.profile.action.1 		= Action 1
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
 
+master.page.editProfile 			= Edit personal data
+
 master.page.login 					= Login
 master.page.logout 					= Logout
 
