--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -55,3 +55,5 @@ master.page.performances = My Performances
 master.page.offers = My Offers
 master.page.banners= My banners
 master.page.mytours = My tours
+
+master.page.organizers = Organizers
