--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -56,3 +56,5 @@ master.page.performances = Mis Actuaciones
 master.page.offers = Mis ofertas
 master.page.banners= Mis anuncios
 master.page.mytours = Mis giras
+
+master.page.organizers = Organizadores
