--- a/Acme-Circus/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/administrator/messages.properties
@@ -6,5 +6,32 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= This is the administrator's action 1
-administrator.action.2	= This is the administrator's action 2
+administrator.personal.data = Personal Data
+administrator.userAccount = User Data
+administrator.creditCard = Credit Card Data
+administrator.dni = Dni
+administrator.name				= Name
+administrator.surnames			= Surnames
+administrator.email			= Email
+administrator.phone			= Phone
+administrator.address			= Address
+administrator.photo			= Photo
+administrator.username			= Username
+administrator.password			= Password
+administrator.confirmPassword			= Confirm password
+administrator.holderName = Holder Name
+administrator.brandName = Brand Name
+administrator.number = Number
+administrator.expirationMonth = Expiration Month
+administrator.expirationYear = Expiration Year
+administrator.cvv = CVV
+administrator.check			= I accept terms and conditions
+administrator.save			= Save
+administrator.cancel			= Cancel
+administrator.phone.pattern = * 9 Numbers *
+
+administrator.username.error = That username is not available
+administrator.commit.error = Cannot commit operation
+administrator.password.error = Passwords do not match
+administrator.email.error = That email is not available
+administrator.expired.card.error = Credit card has expired
