--- a/Acme-Circus/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/administrator/messages_es.properties
@@ -8,3 +8,35 @@
 
 administrator.action.1	= Esta es la acción 1 del administrador
 administrator.action.2	= Esta es la acción 2 del administrador
+
+administrator.personal.data = Datos personales
+administrator.userAccount = Datos de usuario
+administrator.creditCard = Datos de la tarjeta de crédito
+administrator.dni = Dni
+administrator.name				= Nombre
+administrator.VAT		= VAT
+administrator.surnames			= Apellidos
+administrator.email			= Correo
+administrator.phone			= Teléfono
+administrator.address			= Dirección
+administrator.photo			= Foto
+administrator.username			= Nombre de usuario
+administrator.password			= Contraseña
+administrator.confirmPassword			= Confirmación de la contraseña
+administrator.holderName = Nombre del titular
+administrator.brandName = Marca
+administrator.number = Número
+administrator.expirationMonth = Mes de expiración
+administrator.expirationYear = Año de expiración
+administrator.cvv = CVV
+administrator.check			= Acepto los términos y condiciones
+administrator.save			= Guardar
+administrator.cancel			= Cancelar
+administrator.phone.pattern = * 9 Números *
+
+
+register.username.error = Ese nombre de usuario no está disponible
+register.commit.error = No se puede completar la operación
+register.password.error = Las contraseñas no coinciden
+register.email.error = Ese email no está disponible
+register.expired.card.error = La tarjeta de crédito ha expirado
