--- a/Acme-Circus/src/main/webapp/views/artist/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/artist/messages.properties
@@ -35,6 +35,7 @@ artist.check = I accept terms and conditions
 artist.username.error = Username not available
 artist.email.error = There is another account with that email
 artist.password.error = Passwords do not match
+artist.phone.pattern = * 9 Numbers *
 
 artist.vat.pattern = ES is the optional Spanish prefix, A is an alphanumeric character and N is an numeric character
 
