--- a/Acme-Circus/src/main/webapp/views/artist/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/artist/messages_es.properties
@@ -31,6 +31,7 @@ artist.expirationMonth = Mes de expiración
 artist.expirationYear = Año de expiración
 artist.cvv = CVV
 artist.check = Acepto los términos y condiciones
+artist.phone.pattern = * 9 Números *
 
 artist.back = Atrás
 artist.commit.error = No se pudo completar la acción
