--- a/Acme-Circus/src/main/webapp/views/attendee/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/attendee/messages.properties
@@ -29,6 +29,7 @@ attendee.expirationMonth = Expiration Month
 attendee.expirationYear = Expiration Year
 attendee.cvv = CVV
 attendee.check = I accept terms and conditions
+attendee.phone.pattern = * 9 Numbers *
 
 
 attendee.save = Save
