--- a/Acme-Circus/src/main/webapp/views/attendee/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/attendee/messages_es.properties
@@ -28,6 +28,7 @@ attendee.expirationMonth = Mes de expiración
 attendee.expirationYear = Año de expiración
 attendee.cvv = CVV
 attendee.check = Acepto los términos y condiciones
+attendee.phone.pattern = * 9 Números *
 
 attendee.save = Guardar
 attendee.cancel = Cancelar
