--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -7,6 +7,7 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.administrator			= Administrator
+master.page.signup.admin			= New administrator
 master.page.administrator.categoryTour = Tour categories list
 master.page.administrator.actor	= Actors list
 master.page.administrator.stats = Stats
