--- a/Acme-Circus/src/main/webapp/views/organizer/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/organizer/messages.properties
@@ -34,6 +34,7 @@ organizer.check = I accept terms and conditions
 organizer.username.error = Username not available
 organizer.email.error = There is another account with that email
 organizer.password.error = Passwords do not match
+organizer.phone.pattern = * 9 Numbers *
 
 organizer.vat.pattern = ES is the optional Spanish prefix, A is an alphanumeric character and N is an numeric character
 
