--- a/Acme-Circus/src/main/webapp/views/organizer/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/organizer/messages_es.properties
@@ -38,6 +38,7 @@ organizer.commit.error = No se pudo completar la acción
 organizer.username.error = Nombre de usuario no disponible
 organizer.email.error = Ya existe una cuenta con ese email
 organizer.password.error = Las contraseñas no coinciden
+organizer.phone.pattern = * 9 Números *
 
 
 organizer.vat.pattern = ES es el prefijo español opcional, A es un caracter alfanumérico y N es un caracter numérico
