--- a/Acme-Circus/src/main/webapp/views/owner/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/owner/messages.properties
@@ -29,6 +29,7 @@ owner.expirationMonth = Expiration Month
 owner.expirationYear = Expiration Year
 owner.cvv = CVV
 owner.check = I accept terms and conditions
+owner.phone.pattern = * 9 Numbers *
 
 
 owner.save = Save
