--- a/Acme-Circus/src/main/webapp/views/owner/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/owner/messages_es.properties
@@ -28,6 +28,7 @@ owner.expirationMonth = Mes de expiración
 owner.expirationYear = Año de expiración
 owner.cvv = CVV
 owner.check = Acepto los términos y condiciones
+owner.phone.pattern = * 9 Números *
 
 owner.save = Guardar
 owner.cancel = Cancelar
