--- a/Acme-Circus/src/main/webapp/views/offer/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages.properties
@@ -18,4 +18,7 @@ offer.delete = Delete
 offer.performance= Performances
 offer.message.comma = Observation separated by commas
 offer.tour = Tour
+offer.accept = Accept
+offer.reject = Reject
+
 
