--- a/Acme-Circus/src/main/webapp/views/offer/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages_es.properties
@@ -17,3 +17,5 @@ offer.delete = Borrar
 offer.performance= Actuaciones
 offer.message.comma = Observaciones separadas por comas
 offer.tour = Tour
+offer.accept = Aceptar
+offer.reject = Rechazar
