--- a/Acme-Circus/src/main/webapp/views/actor/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/actor/messages.properties
@@ -10,6 +10,7 @@ actor.attendees = Attendees
 actor.organizers = Organizers
 actor.owners = Owners
 actor.artists = Artists
+actor.administrators = Administrators
  
 actor.name = Name
 actor.surnames = Surnames
