--- a/Acme-Circus/src/main/webapp/views/actor/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/actor/messages_es.properties
@@ -10,6 +10,7 @@ actor.attendees = Asistentes
 actor.organizers = Organizadores
 actor.owners = Dueños
 actor.artists = Artistas
+actor.administrators = Administradores
  
 actor.name = Nombre
 actor.surnames = Apellidos
