--- a/Acme-Circus/src/main/webapp/views/categoryPrice/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryPrice/messages.properties
@@ -13,6 +13,7 @@ categoryPrice.city = City
 categoryPrice.location = Location
 categoryPrice.create = Create category price
 categoryPrice.save = Save
+categoryPrice.edit = Edit
 categoryPrice.cancel = Cancel
 categoryPrice.commit.error = There was an error
 categoryPrice.delete.confirmation = Are you sure you want to delete this category?
