--- a/Acme-Circus/src/main/webapp/views/categoryPrice/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryPrice/messages_es.properties
@@ -13,6 +13,7 @@ categoryPrice.city = Ciudad
 categoryPrice.location = Lugar 
 categoryPrice.create = Crear categoría
 categoryPrice.save = Guardar
+categoryPrice.edit = Editar
 categoryPrice.cancel = Cancelar
 categoryPrice.commit.error = Ha ocurrido un error
 categoryPrice.delete.confirmation = ¿Seguro que desea eliminar la categoría?
