--- a/Acme-Circus/src/main/webapp/views/stop/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages.properties
@@ -9,7 +9,7 @@ stop.city=City
 stop.country= Country
 stop.location= Location
 stop.date= Date
-
+stop.show = Show
 stop.purchase= Purchase
 stop.spotsTotal = Spots total
 stop.spotsAvailable = Spots available
