--- a/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
@@ -10,7 +10,7 @@ stop.city=Ciudad
 stop.country= Pais
 stop.location= Ubicacion
 stop.date= Fecha
-
+stop.show = Mostrar
 stop.purchase= Comprar
 stop.spotsTotal = Numero de entradas
 stop.spotsAvailable = Entradas disponibles
