--- a/Acme-Circus/src/main/webapp/views/tour/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages.properties
@@ -13,6 +13,7 @@ tour.endDate = End date
 tour.stops = Stops
 tour.keyword = Keyword
 tour.search = Search
+tour.tags = Tags
 
 tour.validate = Validate tour
 
@@ -35,3 +36,6 @@ tour.edit = Edit
 
 tour.validated.error = You can't edit a tour already validated
 tour.commit.error = Something went wrong
+tour.date.error = Start date must be before End date
+tour.actual.error = Start date must be a future date 
+ 
