--- a/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
@@ -13,6 +13,7 @@ tour.endDate = Final de la gira
 tour.stops = Paradas
 tour.keyword = Palabra clave
 touy.search = Buscar
+tour.tags = Etiquetas
 
 tour.yes = Validado
 tour.no = Sin validar
@@ -32,5 +33,6 @@ tour.link = Enlace
 tour.validate = Validar gira
 
 tour.validated.error = No puedes editar una gira que ya esté validada
-
+tour.date.error = La fecha de fin no puede ser anterior a la fecha de comienzo.
+tour.actual.error = La fecha de comienzo de un tour no puede ser una fecha pasada
 tour.commit.error = Ha ocurrido un error
