--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -57,5 +57,6 @@ master.page.performances = Mis Actuaciones
 master.page.offers = Mis ofertas
 master.page.banners= Mis anuncios
 master.page.mytours = Mis giras
+master.page.mystops = Mis paradas
 
 master.page.organizers = Organizadores
