--- a/Acme-Circus/src/main/webapp/views/stop/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages.properties
@@ -13,3 +13,21 @@ stop.show = Show
 stop.purchase= Purchase
 stop.spotsTotal = Spots total
 stop.spotsAvailable = Spots available
+
+
+stop.tour.validated = Validated tour
+stop.yes = Yes
+stop.no = No
+stop.show = Show
+stop.edit = Edit
+stop.create = Create
+stop.tour = Tour
+stop.cancel = Cancel
+stop.delete = Delete
+stop.save = Save
+stop.delete.confirmation = Are you sure you want to delete this stop?
+
+stop.validated.error = You cant modify a stop whose tour is already validated
+stop.commit.error = Something went wrong
+stop.afterDate.error = Stop date can not be before tour start date
+stop.beforeDate.error = Stop date can not be after tour end date
