--- a/Acme-Circus/src/main/webapp/views/offer/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages.properties
@@ -20,5 +20,5 @@ offer.message.comma = Observation separated by commas
 offer.tour = Tour
 offer.accept = Accept
 offer.reject = Reject
-
+offer.message.blanco = Conditions must be filled
 
