--- a/Acme-Circus/src/main/webapp/views/offer/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages_es.properties
@@ -19,3 +19,4 @@ offer.message.comma = Observaciones separadas por comas
 offer.tour = Tour
 offer.accept = Aceptar
 offer.reject = Rechazar
+offer.message.blanco = Las condiciones tienen que estar rellenas.
