--- a/Acme-Circus/src/main/webapp/views/banner/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/banner/messages.properties
@@ -19,3 +19,5 @@ banner.create= Create banner
 banner.commit.error= Commit error
 banner.commit.errorEndDate= The end date can not be before the start date
 banner.commit.errorStartDate= The start date can not be in the past
+banner.commit.error.noTour= You can not create a banner because there are no valid tours.
+banner.commit.error.tourEmpty= You can not create a banner without selecting a tour.
