--- a/Acme-Circus/src/main/webapp/views/banner/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/banner/messages_es.properties
@@ -21,3 +21,5 @@ banner.create= Crear Banner
 banner.commit.error= No se ha podido completar la operacion
 banner.commit.errorEndDate= La fecha de fin no puede ser anterior a la de inicio
 banner.commit.errorStartDate= La fecha de inicio no puede estar en el pasado
+banner.commit.error.noTour= No puedes crear un anuncio porque no existen giras válidas.
+banner.commit.error.tourEmpty= No puedes crear un anuncio sin seleccionar una gira.
