--- a/Acme-Circus/src/main/webapp/views/purchase/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages.properties
@@ -8,7 +8,7 @@
 purchase.num = Amount
 purchase.category= Category of price
 
-purchase.save = Save
+purchase.save = Buy
 purchase.cancel= Cancel
 
 purchase.stop = Stop
@@ -20,5 +20,7 @@ purchase.creditCard= Credit Card
 purchase.tickets = Tickets
 ticket.refNumber = Reference number
 ticket.categoryPrice = Category Price
-purchase.commit.error= No se ha podido completar la accion.
+purchase.commit.error= Commit error
 ticket.amount= Price
+limit.tickets= You can buy up to 
+purchase.commit.error.limit= You can not buy more tickets than the ones that are available.
