--- a/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
@@ -9,7 +9,7 @@
 purchase.num = Cantidad
 purchase.category= Categoria del precio
 
-purchase.save= Guardar
+purchase.save= Comprar
 purchase.cancel= Cancelar
 
 purchase.stop = Parada
@@ -21,5 +21,7 @@ purchase.creditCard= Tarjeta de credito
 purchase.tickets = Tickets
 ticket.refNumber = Numero de referencia
 ticket.categoryPrice = Categoria del precio
-purchase.commit.error= Commit Error
+purchase.commit.error= No se puede completar la acción.
 ticket.amount= Precio
+limit.tickets= Puedes comprar hasta un total de 
+purchase.commit.error.limit= No puedes comprar mas entradas de las disponibles.
