corregir fecha javi

--- a/Acme-Circus/src/main/webapp/views/offer/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages_es.properties
@@ -19,4 +19,7 @@ offer.message.comma = Observaciones separadas por comas
 offer.tour = Tour
 offer.accept = Aceptar
 offer.reject = Rechazar
-offer.message.blanco = Las condiciones tienen que estar rellenas.
+offer.message.error = Las condiciones tienen que estar rellenas.
+offer.message.date = Ya tienes compromisos para esta fecha
+offer.message.time = Esta oferta ya ha expirado
+
