--- a/Acme-Circus/src/main/webapp/views/offer/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages.properties
@@ -20,5 +20,9 @@ offer.message.comma = Observation separated by commas
 offer.tour = Tour
 offer.accept = Accept
 offer.reject = Reject
-offer.message.blanco = Conditions must be filled
+offer.message.error = Conditions must be filled
+offer.message.date = You have already had commitments on this date
+offer.message.time = This offer has already expired
+
+
 
